; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_icache.c___xfs_inode_free.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_icache.c___xfs_inode_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_inode = type { i32, i32 }
%struct.TYPE_2__ = type { i32 }

@vn_active = common dso_local global i32 0, align 4
@xfs_inode_free_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xfs_inode*)* @__xfs_inode_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__xfs_inode_free(%struct.xfs_inode* %0) #0 {
  %2 = alloca %struct.xfs_inode*, align 8
  store %struct.xfs_inode* %0, %struct.xfs_inode** %2, align 8
  %3 = load %struct.xfs_inode*, %struct.xfs_inode** %2, align 8
  %4 = getelementptr inbounds %struct.xfs_inode, %struct.xfs_inode* %3, i32 0, i32 1
  %5 = call i64 @atomic_read(i32* %4)
  %6 = icmp eq i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load %struct.xfs_inode*, %struct.xfs_inode** %2, align 8
  %10 = getelementptr inbounds %struct.xfs_inode, %struct.xfs_inode* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @vn_active, align 4
  %13 = call i32 @XFS_STATS_DEC(i32 %11, i32 %12)
  %14 = load %struct.xfs_inode*, %struct.xfs_inode** %2, align 8
  %15 = call %struct.TYPE_2__* @VFS_I(%struct.xfs_inode* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* @xfs_inode_free_callback, align 4
  %18 = call i32 @call_rcu(i32* %16, i32 %17)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @XFS_STATS_DEC(i32, i32) #1

declare dso_local i32 @call_rcu(i32*, i32) #1

declare dso_local %struct.TYPE_2__* @VFS_I(%struct.xfs_inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
